--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
 <meta charset="utf-8">
 <title>Adora</title>
+	<link rel="shortcut icon" type="image/x-icon" href="images/logos.ico">
 <link rel="stylesheet" href="css/girlsystem.css" type="text/css">
 <link rel="stylesheet" href="css/default.css" type="text/css">
 <link rel="stylesheet" href="css/fontawesome-all.min.css">
