update meta viewport

--- a/index.html
+++ b/index.html
@@ -2,14 +2,15 @@
 <html>
 <head>
 <meta charset="utf-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Adora</title>
-	<link rel="shortcut icon" type="image/x-icon" href="images/logos.ico">
+<link rel="shortcut icon" type="image/x-icon" href="images/logos.ico">
 <link rel="stylesheet" href="css/girlsystem.css" type="text/css">
 <link rel="stylesheet" href="css/default.css" type="text/css">
 <link rel="stylesheet" href="css/fontawesome-all.min.css">
 <link rel="stylesheet" href="css/fonts.css" type="text/css">
 </head>
-	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 <script>
 $(document).ready(function(){
   // Add smooth scrolling to all links
@@ -203,7 +204,7 @@ $(document).ready(function(){
     </div>
   </div>
   <!-- =============== TƯ VẤN =============== --> 
- <img src="images/bg_sec.png" class="img-res" />
+  <img src="images/bg_sec.png" class="img-res" />
   <div class="tuvan">
     <div class="tuvan1 col-04">
       <h2>TƯ VẤN</h2>
@@ -238,25 +239,25 @@ $(document).ready(function(){
       </form>
     </div>
   </div>
-
-	<div class="clearfix"> </div>
-	<div class="space" style="width:100%; border-top: 1px solid rgba(203,203,201,1.00); margin-top: 500px"></div>
-	<img src="images/logo_doitac.jpg" class="img-res" />
-</div>
-	<footer>
-	<div class="containter">
-		<img src="images/logo-footer.png"  class="col-03"/>
-		<div class="col-06"><h2>VIỆN CHĂM SÓC DA & PHẪU THUẬT THẨM MỸ ADORA</h2>
-		<div style="width: 50%; float: left">
-			<h3>HỒ CHÍ MINH</h3>
-			Add: Số 60 Sương Nguyệt Ánh - Quận 1  Tel: 082 232 2222 - Hotline 094 625 5522</div>
-		<div style="width: 50%; float: left">
-			<h3>HÀ NỘI</h3>
-			Add: 25 Bùi Thị Xuân - Quận Hai Bà Trưng  Tel: 043 552 2222 - Hotline 096 118 2299</div>
-		</div>
-		<div class="col-03 ft" style="margin-top: 20px;padding: 10px;"><h3>HOTLINE 24/24: <strong style="font-size: 30px;">093 912 2222</strong></h3><br>
-<i class="fab fa-facebook-square fa-4x"></i><i class="fab fa-youtube fa-4x"></i><i class="fab fa-google-plus-square fa-4x"></i></div>
-		</div>
-	</footer>
+  <div class="clearfix"> </div>
+  <div class="space" style="width:100%; border-top: 1px solid rgba(203,203,201,1.00); margin-top: 500px"></div>
+  <img src="images/logo_doitac.jpg" class="img-res" /> </div>
+<footer>
+  <div class="containter"> <img src="images/logo-footer.png"  class="col-03"/>
+    <div class="col-06">
+      <h2>VIỆN CHĂM SÓC DA & PHẪU THUẬT THẨM MỸ ADORA</h2>
+      <div style="width: 50%; float: left">
+        <h3>HỒ CHÍ MINH</h3>
+        Add: Số 60 Sương Nguyệt Ánh - Quận 1  Tel: 082 232 2222 - Hotline 094 625 5522</div>
+      <div style="width: 50%; float: left">
+        <h3>HÀ NỘI</h3>
+        Add: 25 Bùi Thị Xuân - Quận Hai Bà Trưng  Tel: 043 552 2222 - Hotline 096 118 2299</div>
+    </div>
+    <div class="col-03 ft" style="margin-top: 20px;padding: 10px;">
+      <h3>HOTLINE 24/24: <strong style="font-size: 30px;">093 912 2222</strong></h3>
+      <br>
+      <i class="fab fa-facebook-square fa-4x"></i><i class="fab fa-youtube fa-4x"></i><i class="fab fa-google-plus-square fa-4x"></i></div>
+  </div>
+</footer>
 </body>
 </html>
